--- a/6amMart_React/.env.production
+++ b/6amMart_React/.env.production
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_GOOGLE_MAP_KEY=
-NEXT_PUBLIC_BASE_URL=
-NEXT_CLIENT_HOST_URL=
+NEXT_PUBLIC_GOOGLE_MAP_KEY="AIzaSyC2mbTCnxE6_LmPphCxeovV9Kplikz-Kg8"
+NEXT_PUBLIC_BASE_URL="https://admin.nukkad.shop"
+NEXT_CLIENT_HOST_URL="https://nukkad.shop"
 NEXT_PUBLIC_SITE_VERSION= 2.12
